# snsmedical

./: .gitignore  README.md  dockerfile  dockerfile.backend  dockerfile.frontend  pyproject.toml
client/utils/: api.py
server/: logger.py  main.py
server/middlewares/: exception_handlers.py
server/modules/: llm.py  load_vectorstore.py  pdf_handlers.py  query_handlers.py  vectorstore_retriever.py
server/routes/: ask_question.py  upload_pdfs.py
